# usd-dependency-viewer

./: .gitignore  CMakeLists.txt  README.md  build.sh  dependencies.txt
cache/: tmp.json
examples/assets/: test.usda  test.usdnc
examples/assets/barrel/: barrel.usd  geo.usdc  mtl.usdc  payload.usdc
examples/assets/crag/: crag.usd  mtl.usdc  payload.usdc
examples/assets/pig/: geo.usdc  mtl.usdc  payload.usdc  pig.usd
examples/assets/rubbertoy/: geo.usdc  mtl.usdc  payload.usdc  rubbertoy.usd
examples/assets/shaderball/: preview_volume.vdb  shaderball.usd
examples/assets/shaderball/maps/: graphics.exr  graphics.exr.rat  logo_houdini.exr  logo_karma.exr  logo_mtlx.exr
examples/assets/simpleprimitive/: geo.usdc  mtl.usdc  payload.usdc  simpleprimitive.usd
examples/assets/simpleprimitive/variants/: capsule.usd  cone.usd  cube.usd  cylinder.usd  sphere.usd
examples/assets/squab/: geo.usdc  mtl.usdc  payload.usdc  squab.usd
examples/assets/templatebody/: geo.usdc  mtl.usdc  payload.usdc  templatebody.usd
examples/assets/templatehead/: geo.usdc  mtl.usdc  payload.usdc  templatehead.usd
examples/assets/tommy/: mtl.usdc  payload.usdc  tommy.usd
examples/assets/wineBarrel/: geo.usdc  mtl.usdc  payload.usdc  wineBarrel.usd
src/: decorators.py  dependencies.py  item.py  main.py
src/Core/: Debug.cpp  Debug.h  DependencyEvaluation.cpp  DependencyEvaluation.h  DependencyNode.cpp  DependencyNode.h  NodePath.cpp  NodePath.h  UsdDependencyGraph.cpp  UsdDependencyGraph.h
src/Core/Nodegraph/: ForceDirectedGraph.cpp  ForceDirectedGraph.h  GraphicsView.cpp  GraphicsView.h  Node.cpp
src/Gui/: Application.cpp  Application.h  Main.cpp
src/Gui/MainWindow/: Application.cpp  Application.h
src/Gui/MainWindow/Widgets/: Footer.cpp  Footer.h  Header.cpp  Header.h  Search.cpp  Search.h  Sidebar.cpp  Sidebar.h  Tree.cpp  Tree.h
src/Gui/Pages/AssetView/: AssetView.cpp  AssetView.h
src/Gui/Pages/DependenciesList/: DependenciesList.cpp  DependenciesList.h
src/Gui/Pages/Home/: Home.cpp
src/Gui/Pages/Navigation/: NavigationPage.cpp  NavigationPage.h
src/Gui/Pages/Navigation/Frameworks/Nodegraph/: Edge.cpp  Edge.h  ForceDirectedGraph.cpp  ForceDirectedGraph.h  GraphicsScene.cpp  GraphicsScene.h  GraphicsView.h  Node.cpp  Node.h
src/Gui/Pages/Navigation/Widgets/: StackedWidget.cpp  StackedWidget.h  StackedWidgetHeader.cpp  StackedWidgetHeader.h
src/Gui/Pages/Navigation/Widgets/Header/: Header.cpp  (+1 more)
src/Gui/Pages/Settings/: Settings.cpp  Settings.h
src/Gui/Widgets/: AbstractButton.cpp  AbstractButton.h  AbstractTable.cpp  AbstractTable.h  AbstractWidgetUtils.cpp  AbstractWidgetUtils.h  Header.cpp  Header.h  NavigationPage.cpp  NavigationPage.h  Search.cpp  Search.h  TableWidget.cpp  TableWidget.h
src/Gui/Widgets/AbstractTable/: AbstractTable.cpp  AbstractTable.h
src/Gui/Widgets/AbstractWidgets/: AbstractButton.cpp  AbstractButton.h  AbstractTable.cpp  AbstractWidgetUtils.cpp  AbstractWidgetUtils.h
src/Gui/Widgets/DropdownWidgets/: Properties.cpp  Results.cpp  Results.h  Sort.cpp  Sort.h
src/Gui/Widgets/ItemSelection/: ItemBackgroundWidget.cpp  ItemBackgroundWidget.h  ItemListWidget.h  ItemThumbnail.cpp  ItemWidget.cpp  ItemWidget.h
src/Gui/Widgets/Nodegraph/: Nodegraph.cpp  Nodegraph.h  NodegraphPropertiesWidget.cpp  NodegraphPropertiesWidget.h
src/Gui/Widgets/Properties/: PropertiesWidget.cpp  PropertiesWidget.h
src/Gui/Widgets/RecursiveViewTable/: TableHeader.h
src/Gui/Widgets/Settings/: Settings.cpp  Settings.h
src/Gui/interface/: AbstractButton.cpp  AbstractButton.h  Application.cpp  Application.h  Database.cpp  Database.h  Home.cpp  Nodegraph.h  RecursiveViewPage.cpp  RecursiveViewPage.h
src/Gui/interface/widgets/: Header.cpp  Header.h  Search.cpp  Tree.h
src/Gui/interface/widgets/dropdown/: Properties.cpp  Properties.h  Results.cpp
src/Gui/interface/widgets/nodegraph/: Edge.cpp  Edge.h  GraphicsView.cpp
src/Gui/pages/ForceDirectedGraphPage/: ForceDirectedGraphPage.cpp  ForceDirectedGraphPage.h
src/Gui/pages/NavigationPage/: NavigationPage.h
src/Gui/pages/NavigationPage/Header/: Header.cpp  Header.h
src/Gui/pages/NavigationPage/Nodegraph/: ForceDirectedGraphPage.cpp  ForceDirectedGraphPage.h
src/Gui/pages/NavigationPage/RecursiveView/: RecursiveTableWidget.cpp  RecursiveTableWidget.h  RecursiveViewPage.cpp  RecursiveViewPage.h
src/Gui/pages/RecursiveViewPage/: RecursiveTableWidget.cpp  RecursiveTableWidget.h  RecursiveViewPage.cpp  RecursiveViewPage.h  TableWidget.cpp  TableWidget.h  UsdGraphItemModel.cpp  UsdGraphItemModel.h
src/core/: decorators.py  dependencies.py  item.py
src/dependency_viewer/: Application.cpp  Main.cpp
src/dependency_viewer/interface/: AbstractButton.cpp  AbstractButton.h  Application.cpp  Application.h  Database.cpp  Database.h  Globals.h  Home.cpp  Home.h  Nodegraph.cpp
src/dependency_viewer/interface/elements/styles/: style.qss
src/dependency_viewer/interface/widgets/: Header.cpp  Header.h  Search.cpp  Search.h  Settings.cpp  Settings.h  Sidebar.cpp  Sidebar.h  Tree.cpp
src/dependency_viewer/interface/widgets/dropdown/: Results.h  Sort.cpp  Sort.h
src/interface/: app.py  application.py  asset_dropdown.py  asset_item.py  asset_library.py  asset_widget.py  button.py  details_view.py  dropdown.py  floating_panel.py  grid.py  header.py  header_left.py  header_right.py  home.py  inspector.py  node.py  object.py  properties_panel.py  settings.py  sidebar.py  strata_globals.py  top_bar.py  utils.py  viewport.py
src/interface/dropdowns/: properties.py  results.py  sort.py  view_switcher.py
src/interface/styles/: style.qss
src/interface/widgets/: dropdown.py  header.py  header_left.py  header_right.py  search.py  settings.py  sidebar.py  thumbnail.py
static/: resources.qrc
static/styles/: blue-color-scheme.qss  darkmode-color-scheme.qss  default-color-scheme.qss  style.bak.qss  style.qss
tests/: .gitignore  conftest.py  decorators.py  dependencies.py  deps_test.py  test_custom_resolver.bak.py  test_custom_resolver.py  test_dependencies.py  test_item.py  test_nodegraph.py  test_utils.py
(+29 files in other folders)
